--- a/blogpost.html
+++ b/blogpost.html
@@ -12,11 +12,14 @@
             </div>
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante del post</h1>
-                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
-                <p>Los blog son la mejor forma de compartir informacion y tus ideas.
-                Mucho mas que ir a conferencias o salir en youtube ecepto si eres un rockstar, pero estadisticamente no lo eres ... por ahora</p>
+                <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+                <p>Los blog son la mejor forma de compartir información y tus ideas.
+                Mucho mas que ir a conferencias o salir en youtube ecepto si eres un rockstar, pero estadísticamente no lo eres ... por ahora</p>
                 <p>Suscribete y dale LIKE</p>
             </div>
+        <div id="footer">
+        Hecho con amor en Platzi &lt;3
+        </div>
         </div>
     </body>
 </html>
